kubernetes/EP10-ingress-demo/app-a-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-a-service

spec:
  selector:
    app: nginx-demo

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
