kubernetes/EP10-ingress-demo/loadbalancer.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-loadbalancer

spec:
  selector:
    app: nginx-demo

  ports:
  - port: 80
    targetPort: 80

  type: LoadBalancer
