kubernetes/EP10-ingress-demo/multi-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: multi-app-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: app-a.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-a-service
            port:
              number: 80

  - host: app-b.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-b-service
            port:
              number: 80
